--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: OpenCoast
 subtitle: 'A band of cloud native programmers, some interesting things'
 description: ''
 keywords:
-author: LFBear
+author: 'opencoast.io'
 language: en
 timezone: ''
 
