--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -40,7 +40,7 @@ social:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.png
+favicon: images/favicon.png
 
 # Avatar (頭像)
 avatar:
